Fix text wrap issue in 'Your Stops' tab

--- a/client/style.css
+++ b/client/style.css
@@ -142,7 +142,7 @@ h3 {
 }
 
 .stop-address {
-  line-height: 5px;
+  margin: 0;
 }
 
 .route-start, 
